--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,11 @@
 <%- include('partials/head') %>
 <body>
-<% if(token) { %>
 <div id="frame">
 	<div id="sidepanel">
 		<div id="profile">
 			<div class="wrap">
 				<img id="profile-img" src="http://emilcarlsson.se/assets/mikeross.png" class="online" alt="" />
 				<p><%= user.username %></p>
-				
-				
 			</div>
 		</div>
 		<div id="search">
@@ -17,22 +14,25 @@
 		</div>
 		<div id="contacts">
 			<ul>
+				<% user.rooms.forEach((room) => {%>
 				<li class="contact">
 					<div class="wrap">
 						<span class="contact-status online"></span>
 						<img src="http://emilcarlsson.se/assets/louislitt.png" alt="" />
 						<div class="meta">
-							<p class="name">Louis Litt</p>
-							<p class="preview">You just got LITT up, Mike.</p>
+							<p class="name"><%= room.users.username %></p>
+							<p class="preview"></p>
 						</div>
 					</div>
 				</li>
+				<% }) %>
 			</ul>
 		</div>
 		<div id="bottom-bar">
-			<button id="addcontact"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add contact</span></button>
-				<button id="settings" type="button" class="btn btn-primary" data-toggle="modal" data-target="#profileModal"><span>Profile</span></button>
-				<%- include('partials/profileModal') %>
+			<button id="addcontact" type="button" class="btn btn-primary" data-toggle="modal" data-target="#contactModal"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add contact</span></button>
+			<%- include('partials/contactModal') %>
+			<button id="settings" type="button" class="btn btn-primary" data-toggle="modal" data-target="#profileModal"><span>Profile</span></button>
+			<%- include('partials/profileModal') %>
 		</div>
 	</div>
 	<div class="content">
@@ -62,8 +62,5 @@
 		</div>
 	</div>
 </div>
-<% } else { %>
-<%- include('partials/authModal')%>
-<% } %>
 <%- include('partials/scripts') %>
 </body></html>
