--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -25,6 +25,7 @@
             name="username"
             placeholder="Type your name"
             required
+            autocomplete="d"
             class="regist__input regist__name"
           />
           <input
