--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -28,8 +28,10 @@
   function isStateChanged() {
     if (changeState) {
       input.style.display = 'block';
+      input.setAttribute('required')
     } else {
       input.style.display = 'none';
+      input.removeAttribute('required')
     }
   }
 </script>
