--- a/views/partials/updateModal.ejs
+++ b/views/partials/updateModal.ejs
@@ -72,10 +72,6 @@
   const updateForm = document.querySelector('.updateForm');
 
   function update(event) {
-    const username = document.querySelector('.usernameToUpdate').value;
-    const email = document.querySelector('.emailToUpdate').value;
-    const image = document.querySelector('.iconToUpdate').files[0];
-
     event.preventDefault();
     const url = 'http://localhost:5000/user';
     const formData = new FormData(updateForm);
@@ -84,11 +80,9 @@
         headers: { 'Content-Type': 'multipart/form-data' },
       })
       .then((response) => console.log(response.data))
+      .then(() => location.reload())
       .catch((error) => console.log(error));
-
-    location.reload();
   }
 
   updateForm.addEventListener('submit', update);
 </script>
-
