--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -32,6 +32,7 @@
       rel="stylesheet prefetch"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/styles/style.css" />
     <title>Chat app</title>
   </head>
