--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -889,3 +889,10 @@ body.modal-open,
 .messageToEdit {
   background-color: whitesmoke;
 }
+
+.sentImage {
+  width: auto !important;
+  border-radius: 0% !important;
+  max-width: 200px;
+  max-height: auto;
+}
